<resources>
    <string name="app_name">DoggyGame</string>
    <string name="start">Start</string>
    <string name="pet_game">Doggy Game</string>
    <string name="dog">dog</string>
    <string name="game_over">Game Over</string>
    <string name="start_again">Start again</string>
    <string name="register">Register</string>
    <string name="signin">Sign in</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="profile">Profile</string>
    <string name="best_score">Best Score:</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="old_password">Old password:</string>
    <string name="new_password">New Password:</string>
    <string name="start_game">Start Game</string>
    <string name="dashboard">Dashboard</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="score">Score</string>
    <string name="user">User</string>
    <string name="top_10_best_scores">Top 10 Best Scores</string>
    <string name="avatar">Avatar</string>
    <string name="set_avatar">Set Avatar</string>
    <string name="search_avatar_by_word">Search avatar by word</string>
    <string name="set_1">Set 1</string>
    <string name="robots">Robot</string>
    <string name="roboheads">Robohead</string>
    <string name="monsters">Monster</string>
    <string name="cats">Cat</string>
    <string name="search">Search</string>
    <string name="search_avatar">Search Avatar</string>
    <string name="save_avatar">Save Avatar</string>
</resources>